# libdicm

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/: .codecov.yml
.github/workflows/: build_test.yml  clang-tidy-review.yml  codecov.yml  linter.yml
examples/: CMakeLists.txt  copy.c  dicm2yaml.c  dummy.c  ul_sq_bomb.c  yaml2dicm.c
include/: CMakeLists.txt  dicm.h
src/: CMakeLists.txt  dicm_configure.h.in  dicm_dst.c  dicm_dst.h  dicm_emitter.c  dicm_emitter.h  dicm_io.c  dicm_io.h  dicm_item.c  dicm_item.h  dicm_log.c  dicm_log.h  dicm_object.c  dicm_parser.c  dicm_parser.h  dicm_private.h  dicm_sequence.c  dicm_sequence.h  dicm_src.c  dicm_src.h  dicm_version.c  encap_item.c  evrbe_item.c  evrle_item.c  ivrle_item.c  posix_compat.h
tests/: CMakeLists.txt  emitting.c  parsing.c  version.c
tests/cases/tb/: simple.dcm
tests/cases/te/: simple.dcm
tests/cases/ti/: simple.dcm
tests/gold/: simple.txt  simple_sqf_empty_frag.txt  simple_sqi.txt  simple_sqi_empty_item.txt  simple_sqi_two_items.txt
tests/gold/evr/: DataSetTrailingPadding.txt  EmptySequenceOfItemsDefinedLength.txt  NestedSequenceOfItemsOnlyDefined1.txt  NestedSequenceOfItemsOnlyDefined2.txt  NestedSequenceOfItemsOnlyDefined4.txt  SequenceOfItemsEmptyItemDefined.txt  SequenceOfItemsEmptyItemDefined3.txt  SequenceOfItemsOneItem.txt  SequenceOfItemsOneItemDefined.txt  SequenceOfItemsOneItemDefined2.txt  SequenceOfItemsTwoItems3.txt  SequenceOfItemsTwoItems5.txt  SequenceOfItemsTwoItems6.txt  all_vrs_2023.txt  complex0.txt  empty.txt  empty_sqi.txt  simple.txt  simple_empty_sqi.txt  simple_nested_sqi.txt  simple_sqi_empty_item.txt  simple_sqi_two_items.txt  sqi_one_item.txt
tests/gold/evr/enc/: NestedSequenceOfFragments.txt  NestedSequenceOfFragments3.txt  NestedSequenceOfFragments5.txt  SequenceOfFragments.txt  SequenceOfFragmentsEmptyFragment.txt  nested_sqf.txt  simple_nested_sqf.txt  simple_sqf.txt  sqf.txt  sqf_empty_frag.txt
tests/gold/ivr/: DataSetTrailingPadding.txt  EmptySequenceOfItemsUndefinedLength.txt  NestedEmptySequenceOfItems.txt  NestedSequenceOfItems.txt  NestedSequenceOfItemsMixed.txt  NestedSequenceOfItemsOnlyDefined1.txt  SequenceOfItemsEmptyItem.txt  SequenceOfItemsEmptyItemDefined2.txt  SequenceOfItemsEmptyItemDefined3.txt  SequenceOfItemsOneItem.txt  SpecificCharacterSet.txt  all_vrs_2023.txt  nested_sqi.txt  simple.txt  simple_empty_sqi.txt  simple_nested_sqi.txt  simple_sqi.txt  simple_sqi_empty_item.txt  simple_sqi_two_items.txt  sqi_empty_item.txt
tests/gold/ivr/raw/: simple_pd.txt
tests/templ/evr/: EmptySequenceOfItemsUndefinedLength.txt  NestedEmptySequenceOfItems.txt  NestedSequenceOfItemsMixed.txt  NestedSequenceOfItemsOnly.txt  NestedSequenceOfItemsOnlyDefined.txt  NestedSequenceOfItemsOnlyDefined3.txt  SequenceOfItemsEmptyItem.txt  SequenceOfItemsEmptyItemDefined2.txt  SequenceOfItemsOneItemDefined3.txt  SequenceOfItemsTwoItems.txt  SequenceOfItemsTwoItems1.txt  SequenceOfItemsTwoItems2.txt  SequenceOfItemsTwoItems4.txt  SpecificCharacterSet.txt  all_vrs_2023.txt  complex1.txt  complex2.txt  complex3.txt  complex4.txt
tests/templ/evr/enc/: NestedSequenceOfFragments2.txt  NestedSequenceOfFragments4.txt  NestedSequenceOfFragments6.txt
tests/templ/evr/raw/: PixelData.txt
tests/templ/ivr/: EmptySequenceOfItemsDefinedLength.txt  NestedSequenceOfItemsOnlyDefined.txt  NestedSequenceOfItemsOnlyDefined1.txt  NestedSequenceOfItemsOnlyDefined2.txt  NestedSequenceOfItemsOnlyDefined3.txt  NestedSequenceOfItemsOnlyDefined4.txt  SequenceOfItemsEmptyItemDefined.txt  SequenceOfItemsEmptyItemDefined2.txt  SequenceOfItemsOneItemDefined.txt  SequenceOfItemsOneItemDefined2.txt  SequenceOfItemsOneItemDefined3.txt  SequenceOfItemsTwoItems.txt  SequenceOfItemsTwoItems1.txt  SequenceOfItemsTwoItems2.txt  SequenceOfItemsTwoItems3.txt  SequenceOfItemsTwoItems4.txt  SequenceOfItemsTwoItems5.txt  SequenceOfItemsTwoItems6.txt  all_vrs_2023.txt
tests/templ/ivr/raw/: PixelData.txt
