set(EXAMPLES copy dummy)
foreach(example ${EXAMPLES})
  add_executable(${example} ${example}.c)
  target_link_libraries(${example} PRIVATE dicm)
endforeach()

# sudo apt install libyaml-dev libb64-dev
option(DICM_BUILD_YAML "Build DICM/YAML examples" OFF)
mark_as_advanced(DICM_BUILD_YAML)
if(DICM_BUILD_YAML)
  set(YAML_EXAMPLES dicm2yaml yaml2dicm)
  foreach(yaml_example ${YAML_EXAMPLES})
    add_executable(${yaml_example} ${yaml_example}.c)
    target_link_libraries(${yaml_example} PRIVATE dicm yaml)
  endforeach()
endif()
